--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -30,4 +30,5 @@ zip = "2.2.3"
 reqwest = { version = "0.12.14", features = ["json"] }
 lazy_static = "1.5.0"
 dirs = "6.0.0"
+sysinfo = "0.33.1"
 
