--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,4 +31,5 @@ reqwest = { version = "0.12.14", features = ["json"] }
 lazy_static = "1.5.0"
 dirs = "6.0.0"
 sysinfo = "0.33.1"
+anyhow = "1.0.97"
 
