--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,7 @@ tokio = "1.44.1"
 tauri-plugin-http = "2"
 tauri-plugin-os = "2"
 zip = "2.2.3"
-reqwest = { version = "0.12.14", features = ["json"] }
+reqwest = { version = "0.12.14", features = ["json", "blocking"] }
 lazy_static = "1.5.0"
 dirs = "6.0.0"
 sysinfo = "0.33.1"
