--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -33,4 +33,8 @@ dirs = "6.0.0"
 sysinfo = "0.33.1"
 anyhow = "1.0.97"
 tauri-plugin-store = "2"
+tauri-plugin-notification = "2"
+once_cell = "1.21.2"
+log = "0.4.27"
+env_logger = "0.11.7"
 
