--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,7 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-dialog = "2"
-tokio = "1.44.1"
+tokio = { version = "1.44.1", features = ["full", "process"] }
 tauri-plugin-http = "2"
 tauri-plugin-os = "2"
 zip = "2.2.3"
