--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ env_logger = "0.11.7"
 serde_urlencoded = "0.7.1"
 chrono = "0.4.40"
 sha2 = "0.10.8"
+which = "7.0.3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
