--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-os": "^2.2.1",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "canvas-confetti": "^1.9.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -37,6 +38,7 @@
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.3",
     "@tauri-apps/cli": "^2.3.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
