--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,8 +39,10 @@ log = "0.4.27"
 env_logger = "0.11.7"
 serde_urlencoded = "0.7.1"
 chrono = "0.4.40"
-sha2 = "0.10.8"
 which = "7.0.3"
+walkdir = "2.5.0"
+sha2 = "0.10.8"
+tempfile = "3.19.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
