--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,7 +38,7 @@ once_cell = "1.21.2"
 log = "0.4.27"
 env_logger = "0.11.7"
 serde_urlencoded = "0.7.1"
-chrono = "0.4.40"
+chrono = { version = "0.4.40", features = ["serde"] }
 which = "7.0.3"
 walkdir = "2.5.0"
 sha2 = "0.10.8"
