Enhance error handling and user feedback in Rclone API interactions
- Updated error messages in `api_query.rs` to include visual indicators for failures.
- Improved port management in `engine.rs` with a new method to update the API port.
- Adjusted `tauri.conf.json` to specify build targets explicitly.
- Refactored `app.component.html` for better readability and structure.
- Streamlined onboarding status check in `app.component.ts` to use async/await.
- Enhanced button styles in `onboarding.component.html` for better user experience.
- Improved theme management in `titlebar.component.ts` to avoid unnecessary saves during initialization.
- Added checks for mounted remotes before deletion in `home.component.ts`.
- Updated modal components for better form handling in `remote-config-modal.component.ts`.
- Cleaned up logging and error handling in `rclone.service.ts` for clarity and consistency.
- Added console logs for authentication state changes in `state.service.ts`.
- Updated README with new screenshots and instructions for the latest features.
- Removed outdated screenshots and added new ones for the desktop and mobile UI.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,9 @@ walkdir = "2.5.0"
 sha2 = "0.10.8"
 tempfile = "3.19.1"
 
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
+
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
 
