--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,13 +36,13 @@ tauri-plugin-store = "2"
 tauri-plugin-notification = "2"
 once_cell = "1.21.2"
 log = "0.4.27"
-env_logger = "0.11.7"
 serde_urlencoded = "0.7.1"
 chrono = { version = "0.4.40", features = ["serde"] }
 which = "7.0.3"
 walkdir = "2.5.0"
 sha2 = "0.10.8"
 tempfile = "3.19.1"
+regex = "1.11.1"
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
