--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,4 +50,5 @@ shellexpand = "3.1.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
+tauri-plugin-single-instance = "2"
 
