--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,9 @@ sha2 = "0.10.9"
 tempfile = "3.20.0"
 regex = "1.11.1"
 
+[target.'cfg(unix)'.dependencies]
+nix = "0.30.1"
+
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
 shellexpand = "3.1.1"
