--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,8 +47,16 @@ regex = "1.11.1"
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+zbus = "5.7.1"
+futures-lite = "2.6.0"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+network-interface = "2.0.1"
+
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }
+windows = { version = "0.60.0", features = ["Networking_Connectivity"] }
 shellexpand = "3.1.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
