feat: Implement process management utilities and rclone integration
- Added functions to kill processes by PID and find processes using specific ports in `process.rs`.
- Introduced rclone API endpoints in `endpoints.rs` for better organization and access.
- Implemented mount plugin installation checks and commands in `mount.rs`.
- Created a loading overlay component with customizable properties in Angular.
- Developed global shortcut handling for application actions in `shortcut-handler.directive.ts`.
- Enhanced user experience with notifications and modal dialogs for various actions.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,5 +58,6 @@ shellexpand = "3.1.1"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
+tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
 
