feat: Implement Rclone update feature with UI components
- Added RcloneUpdateService to handle update checks and status management.
- Created RcloneUpdateIconComponent to display update status and trigger checks.
- Developed UpdateConfirmationDialogComponent for user confirmation before updates.
- Integrated SVG icons for update indicators.
- Enhanced flag-config-step component for better accessibility and usability.
- Updated styles for new components and modals.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
     "Cargo.toml": "toml",
     "rustfmt.toml": "toml",
     ".clippy.toml": "toml"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
