--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
       "prettier --write"
     ],
     "src-tauri/src/**/*.rs": [
-      "cargo fmt --",
-      "cargo clippy -- -D warnings"
+      "sh -c 'cd src-tauri && cargo fmt'",
+      "sh -c 'cd src-tauri && cargo clippy -- -D warnings'"
     ]
   },
   "private": true,
