Refactor Rclone utility functions and improve error handling
- Simplified error messages in `safe_copy_rclone` function.
- Removed unused `save_rclone_path` function and related code.
- Enhanced SHA256 computation and verification functions for better readability.
- Updated `CoreSettings` struct to include `rclone_path`.
- Refactored Angular components for improved readability and maintainability.
- Added new methods in `InstallationService` for managing Rclone paths and configurations.
- Improved loading overlay and onboarding UI components.
- Updated tray menu functionality in Tauri to enhance user experience.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,6 +20,12 @@
       "options": {
         "singleQuote": false
       }
+    },
+    {
+      "files": "*.rs",
+      "options": {
+        "tabWidth": 4
+      }
     }
   ]
 }
