refactor: centralize Tauri API usage and enable headless build support (Not implemented. We have to long way to implement that.)
- Moved all Tauri API calls into dedicated service folders (services, services-headless)
- Centralized Tauri window and command logic in TauriBaseService
- Updated WindowService and other services to use TauriBaseService for backend calls
- Added emitEvent to TauriBaseService for unified event emission
- Implemented Angular build configuration and path aliasing for headless/web vs. Tauri builds
- Improved service structure for easier headless/GUI separation and future maintenance

--- a/angular.json
+++ b/angular.json
@@ -45,6 +45,14 @@
               ],
               "outputHashing": "all"
             },
+            "headless": {
+              "fileReplacements": [
+                {
+                  "replace": "src/app/services/index.ts",
+                  "with": "src/app/services-headless/index.ts"
+                }
+              ]
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
@@ -64,6 +72,9 @@
             },
             "development": {
               "buildTarget": "rclone-manager:build:development"
+            },
+            "headless": {
+              "buildTarget": "rclone-manager:build:headless"
             }
           },
           "defaultConfiguration": "development"
