--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,6 +43,8 @@ walkdir = "2.5.0"
 sha2 = "0.10.9"
 tempfile = "3.20.0"
 regex = "1.11.1"
+uuid = { version = "1.18", features = ["v4"] }
+rand = "0.9.2"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
