--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./dist/out-tsc",
     "baseUrl": "./",
     "paths": {
-      "@app/services": ["src/app/services/index.ts"]
+      "@app/services": ["src/app/services/index.ts"],
+      "@app/types": ["src/app/shared/types/index.ts"]
     },
     "forceConsistentCasingInFileNames": true,
     "strict": true,
