Refactor rclone binary handling and update related commands
- Downgraded Angular build dependencies in package.json.
- Renamed `is_rclone_available` to `check_rclone_available` for clarity.
- Introduced `build_rclone_command` to streamline command creation with optional overrides for binary and config paths.
- Updated various modules to utilize the new command building function, ensuring consistent rclone path handling.
- Enhanced error handling for rclone binary availability checks.
- Removed unused rclone path variable from RcApiEngine struct.
- Updated SystemInfoService to reflect the renamed command for checking rclone availability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     "editor.formatOnSave": true
   },
   "rust-analyzer.rustfmt.extraArgs": ["+nightly"],
-  "rust-analyzer.checkOnSave.command": "clippy",
+  "rust-analyzer.checkOnSave": true,
   "files.associations": {
     "*.rs": "rust",
     "Cargo.toml": "toml",
