--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -11,7 +11,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'ubuntu-latest' 
+          - platform: 'ubuntu-latest'
+            args: ''
+          - platform: 'ubuntu-latest-arm'
             args: ''
 
     runs-on: ${{ matrix.platform }}
@@ -19,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-latest' # This must match the platform value defined above.
+        if: matrix.platform == 'ubuntu-latest' || matrix.platform == 'ubuntu-latest-arm'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
@@ -43,7 +45,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TAURI_TOKEN }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: 'RClone Manager v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
