--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -35,7 +35,7 @@ jobs:
         if: matrix.platform == 'macos-latest'
         with:
           targets: ${{ matrix.type == 'aarch64' && 'aarch64-apple-darwin' || 'x86_64-apple-darwin' }}
-          
+
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
@@ -49,7 +49,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TAURI_TOKEN }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          tagName: v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           releaseName: 'RClone Manager v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: true
