--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -11,9 +11,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: 'ubuntu-latest'
+          - platform: 'ubuntu-22.04'
             args: ''
-          - platform: 'ubuntu-latest-arm'
+          - platform: 'ubuntu-22.04-arm'
             args: ''
 
     runs-on: ${{ matrix.platform }}
