feat: add updater functionality with UI integration
- Added `@tauri-apps/plugin-updater` dependency to package.json.
- Updated Cargo.lock and Cargo.toml for new dependencies related to updater.
- Implemented updater capabilities in the Tauri application, including fetching and installing updates.
- Created a new updater module in Rust for handling update logic.
- Integrated update checking and installation in the Angular application.
- Added UI components for displaying update information and actions in the about modal.
- Implemented settings for auto-checking updates and managing update channels.
- Enhanced title bar with update notification badge.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,9 @@ jobs:
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.TAURI_TOKEN }}
+
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           tagName: v__VERSION__-beta
           releaseName: 'RClone Manager v__VERSION__'
