--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tauri-apps/plugin-opener": "^2.2.6",
     "@tauri-apps/plugin-os": "^2.2.1",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "chart.js": "^4.4.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
