--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -45,6 +45,7 @@ tempfile = "3.20.0"
 regex = "1.11.1"
 uuid = { version = "1.18", features = ["v4"] }
 rand = "0.9.2"
+thiserror = "2.0"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
@@ -67,4 +68,6 @@ keyring = { version = "3", features = ["apple-native"] }
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
+tauri-plugin-updater = "2"
+url = "2.5"
 
