--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -68,6 +68,11 @@ keyring = { version = "3", features = ["apple-native"] }
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
 tauri-plugin-single-instance = "2"
-tauri-plugin-updater = "2"
-url = "2.5"
+tauri-plugin-updater = { version = "2", optional = true }
+url = { version = "2.5", optional = true }
+
+[features]
+default = ["updater"]
+updater = ["tauri-plugin-updater", "url"]
+flatpak = []
 
