refactor: streamline update handling and improve UI feedback
- Removed unused platform info and update channel interface.
- Consolidated update-related properties and methods in AboutModalComponent.
- Enhanced updater service to manage state more effectively with UpdateStateService.
- Updated titlebar to reflect update availability with a badge.
- Removed deprecated Flatpak icon and replaced it with a generic package icon.
- Cleaned up styles and adjusted button sizes for better UI consistency.
- Improved error handling and logging in the updater service.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -75,4 +75,7 @@ url = { version = "2.5", optional = true }
 default = ["updater"]
 updater = ["tauri-plugin-updater", "url"]
 flatpak = []
+deb = []
+rpm = []
+arch = []
 
