--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,7 +30,6 @@ zip = "4.0.0"
 reqwest = { version = "0.12.19", features = ["json", "blocking"] }
 lazy_static = "1.5.0"
 dirs = "6.0.0"
-sysinfo = "0.33.1"
 anyhow = "1.0.98"
 tauri-plugin-store = "2"
 tauri-plugin-notification = "2"
@@ -46,6 +45,8 @@ regex = "1.11.1"
 uuid = { version = "1.18", features = ["v4"] }
 rand = "0.9.2"
 thiserror = "2.0"
+netstat2 = "0.11.2"
+sysinfo = "0.33.1"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
