--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "baseUrl": "./",
     "paths": {
       "@app/services": ["src/app/services/index.ts"],
-      "@app/types": ["src/app/shared/types/index.ts"]
+      "@app/types": ["src/app/shared/types/index.ts"],
+      "@app/pipes": ["src/app/shared/pipes/index.ts"]
     },
     "forceConsistentCasingInFileNames": true,
     "strict": true,
