feat: Refactor SettingControlComponent and introduce RcloneValueMapperService
- Refactored SettingControlComponent to improve option handling and value mapping.
- Introduced RcloneValueMapperService for converting between machine values and human-readable formats.
- Enhanced validation logic by moving validators to ValidatorRegistryService.
- Updated UI behavior to ensure proper default value handling and change detection.
- Improved performance by caching regex patterns and optimizing value comparisons.
- Adjusted styles in custom-theme.scss for better layout control.

--- a/src-tauri/linux/template.desktop
+++ b/src-tauri/linux/template.desktop
@@ -9,3 +9,9 @@ Categories=Utility;FileTools;
 Keywords=rclone;cloud;backup;sync;
 StartupWMClass=rclone-manager
 MimeType=application/x-rclone-config;
+Actions=StartOnTray;
+
+[Desktop Action StartOnTray]
+Name=Start on Tray
+Exec=rclone-manager --tray
+OnlyShowIn=GNOME;Unity;XFCE;KDE;
