Add cache key for Rust workspace in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,7 @@ jobs:
         uses: swatinem/rust-cache@v2
         with:
           workspaces: "./src-tauri -> target"
+          key: ${{ runner.os }}-${{ runner.arch }}
 
       - name: install frontend dependencies
         run: npm install
