fix(AUR): update pkgrel to 2 and correct source file paths in PKGBUILD and PKGBUILD-git

--- a/AUR/PKGBUILD
+++ b/AUR/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=rclone-manager
 appname='Rclone.Manager'
 releasetag=0.1.5
 pkgver=0.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="User-friendly GUI for Rclone"
 arch=('x86_64' 'aarch64')
 url="https://github.com/Zarestia-Dev/rclone-manager"
@@ -12,8 +12,8 @@ depends=('cairo' 'desktop-file-utils' 'gdk-pixbuf2' 'glib2' 'gtk3' 'hicolor-icon
 optdepends=('7zip: Encrypt/decrypt backup data')
 options=('!strip' '!debug')
 # install=${pkgname}.install
-source_x86_64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_amd64.deb")
-source_aarch64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_arm64.deb")
+source_x86_64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_amd64_linux.deb")
+source_aarch64=("${url}/releases/download/v${releasetag}/${appname}_${pkgver}_arm64_linux.deb")
 sha256sums_x86_64=('SKIP')
 sha256sums_aarch64=('SKIP')
 package() {
