feat: implement scheduled task management with cron support
- Added ScheduledTask type and related enums for task types and statuses.
- Implemented ScheduledTask struct with fields for task configuration, status, and statistics.
- Created SchedulerService for managing scheduled tasks, including CRUD operations and event handling.
- Developed CronInputComponent for visual and manual cron expression input.
- Added validation for cron expressions and user-friendly presets for scheduling.
- Introduced icons for calendar and clock in the assets.
- Created unit tests for SchedulerService to ensure functionality.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -48,6 +48,8 @@ thiserror = "2.0"
 netstat2 = "0.11.2"
 sysinfo = "0.33.1"
 tauri-plugin-shell = "2"
+tokio-cron-scheduler = "0.13.0"
+croner = "2.0.6"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.30.1"
