Refactor serve management and API state handling
- Removed unnecessary panel state management in GeneralOverviewComponent.
- Consolidated serve stopping logic to emit events instead of direct service calls.
- Updated serve detail and overview components to handle serve stopping via emitted events.
- Introduced EngineState struct for managing API and OAuth URLs/ports in a thread-safe manner.
- Enhanced API client service to support additional commands and improved command handling.
- Updated serve management service to correctly handle cached serves and API responses.
- Refined logs modal to remove saved filters functionality and streamline log loading.
- Adjusted sidebar component to correctly display serving information.
- Improved styling for remote panels and cron input components for better UI consistency.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,10 +16,10 @@ name = "rclone_manager_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 # Uncomment the following lines to build the headless server binary
-# [[bin]]
-# name = "rclone-manager-headless"
-# path = "src/headless.rs"
-# required-features = ["web-server"]
+[[bin]]
+name = "rclone-manager-headless"
+path = "src/headless.rs"
+required-features = ["web-server"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
