feat: add convert asset source endpoint and functionality
- Implemented a new API endpoint `/convert-asset-src` to convert local file paths to webview asset URLs.
- Added `convert_file_src` function in the rclone queries to handle the conversion logic.
- Updated the headless server to include the new route and log the API usage.
- Modified the file viewer service to use the new API for generating URLs in desktop mode.
- Removed unused mount management functions and cleaned up related code.
- Enhanced the Nautilus component to improve selection summary and file handling.
- Updated the UI to reflect changes in file operations and removed unnecessary animations.
- Added a GitHub Actions workflow for building a portable version of the application for Windows.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,10 +16,10 @@ name = "rclone_manager_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 # Uncomment the following lines to build the headless server binary
-#[[bin]]
-#name = "rclone-manager-headless"
-#path = "src/headless.rs"
-#required-features = ["web-server"]
+[[bin]]
+name = "rclone-manager-headless"
+path = "src/headless.rs"
+required-features = ["web-server"]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
@@ -57,6 +57,12 @@ sysinfo = "0.33.1"
 tauri-plugin-shell = "2"
 tokio-cron-scheduler = "0.13.0"
 croner = "3.0.1"
+base64 = "0.22"
+
+# Implementation based on: https://github.com/tauri-apps/tauri/issues/12022
+# Until Tauri provides a built-in Rust API, this manual implementation is required
+urlencoding = "2.1"
+dunce = "1.0"
 
 # Web server dependencies (optional)
 axum = { version = "0.7", optional = true }
@@ -95,6 +101,7 @@ url = { version = "2.5", optional = true }
 default = ["updater"]
 updater = ["tauri-plugin-updater", "url"]
 web-server = ["axum", "tower", "tower-http", "clap", "tokio-stream", "futures", "async-stream"]
+portable = []
 flatpak = []
 deb = []
 rpm = []
